--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  provider: ^4.3.3
+  rxdart: ^0.25.0
+  get_it: ^5.0.1
+  google_fonts: ^1.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
