--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,21 @@ dependencies:
   rxdart: ^0.25.0
   get_it: ^5.0.1
   google_fonts: ^1.1.1
+  chopper: ^3.0.6
+  built_value: ^7.1.0
+  built_collection: ^4.3.2
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.5.1
+  chopper_generator: ^3.0.0
+  build_runner: ^1.9.0
+  built_value_generator: ^7.1.0
+
+dependency_overrides:
+  analyzer: 1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -53,6 +64,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/jsons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
