--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   built_value: ^7.1.0
   built_collection: ^4.3.2
   connectivity: ^2.0.2
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +47,7 @@ dev_dependencies:
   chopper_generator: ^3.0.0
   build_runner: ^1.9.0
   built_value_generator: ^7.1.0
+  hive_generator: ^0.8.2
 
 dependency_overrides:
   analyzer: 1.1.0
