--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   connectivity: ^2.0.2
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
+  qr_flutter: ^4.0.0
+  flutter_barcode_scanner: ^1.0.2
 
 dev_dependencies:
   flutter_test:
